# dicom-info

./: .gitignore  Makefile  README.md  pyproject.toml  test_dicominfo.py
.github/workflows/: ci.yml  publish_pypi.yml
dicominfo/: __init__.py  __main__.py  _version.py  cli.py  core.py  exceptions.py  utils.py  viewer.py
tests/: test_dicominfo.py
