[project]
name = "dicom-info"
version = "0.2.0"
description = "Prints information about DICOM files."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydicom>=3.0.1",
    "matplotlib>=3.7.0",
    "numpy>=1.24.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[project.scripts]
dicom-info = "dicominfo:main"

[tool.uv]
package = true

[tool.ruff]
line-length = 79
indent-width = 4

[tool.ruff.lint]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]
select = ["ALL"]
ignore = ["D407"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = true
line-ending = "auto"
docstring-code-format = true
